<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/new_frag"
        android:id = "@+id/menu_item_new_frag"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"/>

    <item
        android:title="@string/show_list_of_files"
        android:id = "@+id/show_list_of_files"
        android:orderInCategory="150"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/change_data"
        android:id = "@+id/change_data"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_change"
        app:showAsAction="always"/>

    <item
        android:title="@string/save_data_in_file"
        android:id = "@+id/save_data_in_file"
        android:orderInCategory="250"
        android:icon="@drawable/ic_action_save_in_file"
        app:showAsAction="always"/>

    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings_temp"
        android:orderInCategory="300"
        app:showAsAction="never"/>

</menu>