<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/new_frag"
        android:id = "@+id/menu_item_new_frag"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"/>

    <item
        android:title="@string/change_temp"
        android:id = "@+id/change_temp_up_down"
        android:orderInCategory="100"
        android:icon="@drawable/ic_swap_vert_white_32dp"
        app:showAsAction="always"/>

    <item
        android:title="@string/save_data_in_file"
        android:id = "@+id/save_data_in_file"
        android:orderInCategory="150"
        android:icon="@drawable/ic_action_save_in_file"
        app:showAsAction="always"/>

    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings_temp"
        android:orderInCategory="300"
        app:showAsAction="never"/>

</menu>