<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80cff2da"
    tools:context=".NewExerciseActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearLayout4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rect"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/FileName"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/etFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:width="70dp"
                android:gravity="left"
                android:hint="@string/FileNameInput"
                android:inputType="text"
                android:textColor="#0f1af3"
                android:textSize="25dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/DelayOfStart"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/etDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="70dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/DelayOfStartInput"
                android:inputType="number"
                android:text="@string/DelayValue"
                android:textColor="#0f1af3"
                android:textSize="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mark0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Fragment"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/mark100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/OfSet"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/mark1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/FragmentOfSet1"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/mark2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/FragmentOfSet2"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/mark3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/FragmentOfSet3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/mark4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/FragmentOfSet4"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/mark5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/FragmentOfSet5"
                    android:textSize="20dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/vert_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lebelTime"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/tvTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Sec"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/timeValue_item1"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/timeValue_item2"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/time3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/timeValue_item3"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/time4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/timeValue_item4"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/time5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@string/timeValue_item5"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vert_reps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvReps1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lebelCount"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/tvReps2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lebelCountN"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/reps1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/repsValue_item1"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/reps2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:numeric="integer"
                    android:text="@string/repsValue_item2"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/reps3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/repsValue_item3"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/reps4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/repsValue_item4"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/reps5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/repsValue_item5"
                    android:textColor="#0f1af3"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/draw"
        android:text="@string/CreateFileSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"/>


</androidx.constraintlayout.ConstraintLayout>