<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/аccurancy_entry_number"
        android:entryValues="@array/аccurancy_entryValues_number"
        android:key="accurancy"
        android:defaultValue="3"
        android:title="Точность отсечек"
        android:summary="@string/Accurancy">
    </ListPreference>

    <CheckBoxPreference
        android:key="cbSound"
        android:title="Звук"
        android:summaryOn="@string/cbSoundOn"
        android:summaryOff="@string/cbSoundOff"
        android:defaultValue="@string/cbSoundOff">
    </CheckBoxPreference>

    <ListPreference
        android:entries="@array/pause_entry_number"
        android:entryValues="@array/pause_entryValues_number"
        android:key="pause_type"
        android:defaultValue="1"
        android:title="Пауза секундомера"
        android:summary="Варианты работы секундомера в режиме паузы">
    </ListPreference>

</PreferenceScreen>
