<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Задержка, сек   "
            android:id="@+id/textViewDelay"
            android:textSize="20dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextDelay"
            android:text="5"
            android:nestedScrollingEnabled="false"
            android:numeric="integer"
            android:width="70dp"
            android:textSize="25dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCountDown"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="40dp"
            android:gravity="center_horizontal"
            android:textColor="#f80515"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarTime"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_time"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:hint="0:00.0"
            android:gravity="left"
            android:textColor="#0cce1c"
            android:layout_weight="6"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_reps"
            android:keepScreenOn="true"
            android:layout_margin="5dp"
            android:textSize="60dp"
            android:hint="0"
            android:textColor="#0820f8"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/vert_time">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lebelTime"
                android:id="@+id/time_item1_label"
                android:layout_margin="5dp"
                android:textSize="20dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/time_item1_editText"
                android:text="@string/timeValue_item1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/time_item2_editText"
                android:text="@string/timeValue_item2"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/time_item3_editText"
                android:text="@string/timeValue_item3"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/time_item4_editText"
                android:text="@string/timeValue_item4"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/time_item5_editText"
                android:text="@string/timeValue_item5"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/vert_reps">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lebelCount"
                android:id="@+id/reps_item1_label"
                android:layout_margin="5dp"
                android:textSize="20dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/reps_item1_editText"
                android:text="@string/repsValue_item1"
                android:numeric="integer"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/reps_item2_editText"
                android:text="@string/repsValue_item2"
                android:numeric="integer"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/reps_item3_editText"
                android:text="@string/repsValue_item3"
                android:numeric="integer"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/reps_item4_editText"
                android:text="@string/repsValue_item4"
                android:numeric="integer"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/reps_item5_editText"
                android:text="@string/repsValue_item5"
                android:numeric="integer"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mark0"
                android:textSize="20dp"
                android:layout_margin="5dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/mark1"
                android:text="1"
                android:gravity="center"
                android:textColor="#0f1af3"
                android:editable="false"
                android:enabled="false"
                android:elegantTextHeight="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/mark2"
                android:text="2"
                android:gravity="center"
                android:textColor="#0f1af3"
                android:enabled="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|none"
                android:ems="10"
                android:id="@+id/mark3"
                android:text="3"
                android:gravity="center"
                android:textColor="#0f1af3"
                android:enabled="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/mark4"
                android:text="4"
                android:gravity="center"
                android:textColor="#0f1af3"
                android:enabled="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/mark5"
                android:text="5"
                android:gravity="center|clip_vertical"
                android:textColor="#0f1af3"
                android:enabled="false"
                android:visibility="visible"
                android:textIsSelectable="true"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:id="@+id/reset_button"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:id="@+id/stop_button"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:id="@+id/start_button"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</LinearLayout>
